--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
+canvas {
+  background-color: aqua;
+  border-radius: 20px;
+  border: 5px solid black
+}
+
+#draw-area {
+  background-color: blue;
+  width: 75vw;
+  max-height: 80vh;
+  max-width: fit-content;
+  overflow: scroll;
+  padding: 20px;
+}
+
+#stat-area {
+  display: grid;
+  max-height: 80vh;
+  align-items: center;
+  justify-items: center;
+  grid-template-rows: 30%;
+  width: 25vw;
+}
+
 .App {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  flex-basis: content;
+  justify-content: center;
+}
+
+table {
+  border: 5px solid black;
+  width: max-content;
+  border-radius: 5vw;
+  width: 10vw;
+  height: 10vw;
+  color: white;
+  background-color: black;
+}
+
+td {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.node_id {
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  align-self: stretch;
+  border-radius: inherit;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.edge_node_id {
+  background-color: white;
+  color: black;
+  border: 10px solid black;
+  font-weight: bold;
+  align-self: stretch;
+  border-radius: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#adj-list-view {
+  margin: 5vw;
+  grid-row: 2 / 3;
+  display: block;
+  border-radius: 5px;
+  width: 20vw;
+  height: 60%;
+  overflow: scroll;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#adj-list-view table {
+  border-radius: 5px;
+  width: 20vw;
+  min-height: 100%;
+  height: fit-content;
+  display: block;
 }
