--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 canvas {
   background-color: aqua;
   border-radius: 20px;
-  border: 5px solid black
+  border: 5px solid black;
+  /* max-width: max-content;
+  max-height: max-content; */
 }
 
 #draw-area {
@@ -81,4 +83,36 @@ td {
 
 option{
   font-family: monospace;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: rgb(46, 46, 46);;
+}
+
+::-webkit-resizer {
+    background-color: rgb(46, 46, 46);
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(46, 46, 46);
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: white; 
+  border: solid 2px black;
+  border-radius: 5px;
+  transition: all 2s;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(194, 194, 194); 
 }
