--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,62 @@
 canvas {
-  background-color: aqua;
-  border-radius: 20px;
-  border: 5px solid black;
+  background-color: white;
+  border: 5px solid rgb(255, 255, 255);
+  margin: 10px;
+  border-radius: 100px;
+  transition: all .2s;
   /* max-width: max-content;
   max-height: max-content; */
 }
 
+canvas:hover {
+  border-radius: 0px;
+  transform: scale(1);
+}
+
+* {
+  user-select: none;
+}
+
+textarea {
+  user-select: text;
+}
+
+body {
+  background-color: black;
+}
+
+
 #draw-area {
-  background-color: blue;
+  background-color: black;
   width: 75vw;
   max-height: 80vh;
   max-width: fit-content;
   overflow: scroll;
-  padding: 20px;
 }
+
+button {
+  background-color: white;
+}
+
+button, select {
+  border-radius: 1px;
+  margin: 10px;
+  border: 1px solid black;
+  transition: all .2s;
+}
+
+button:hover, select:hover{
+  border-radius: 0px;
+  margin: 1px;
+  border: 10px solid white;
+}
+
+select:focus {
+  border-radius: 0px;
+  margin: 1px;
+  border: 10px solid white;
+}
+
 
 #stat-area {
   display: grid;
@@ -92,27 +135,27 @@ option{
 }
 
 ::-webkit-scrollbar-corner {
-  background-color: rgb(46, 46, 46);;
+  background-color: black;
 }
 
 ::-webkit-resizer {
-    background-color: rgb(46, 46, 46);
+    background-color: black;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: rgb(46, 46, 46);
+  background: black;
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: white; 
+  background-color: white; 
   border: solid 2px black;
   border-radius: 5px;
-  transition: all 2s;
+  transition: all 1s;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(194, 194, 194); 
+  background-color: rgb(75, 75, 75); 
 }
